# fea-ml-training

./: .gitignore  DOCUMENTATION.md  README.md  main.py  pyproject.toml
docs/: GCNs.md  Overview.md
models/lhs/: metrics.json  scaler_mean.npy  scaler_std.npy
models/random/: metrics.json  scaler_mean.npy  scaler_std.npy
models/sobol/: metrics.json  model_type.npy  scaler_mean.npy  scaler_std.npy
models/taguchi/: metrics.json  scaler_mean.npy  scaler_std.npy
src/: data_generator.py  generate_dataset.py  input_visualizer.py  rom_model.py  visualizer.py
src/rom_model/: __init__.py  adjacency.py  architectures.py  layers.py  trainer.py
tests/: 01_gen_all.bat  02_gcn_all.bat  03_gcn_eval.bat
