[project]
name = "fea-ml-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pynastran>=1.3.4",
    "pyvista>=0.46.5",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.20.0",
    "tqdm>=4.67.1",
    "vtk>=9.5.2",
]
