[project]
name = "fea-ml-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pynastran>=1.3.4",
    "pytest>=9.0.2",
    "pyvista>=0.46.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "sympy>=1.14.0",
    "tensorflow>=2.20.0",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.1",
    "trame>=3.12.0",
    "vtk>=9.5.2",
]
